--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "composer/installers": "^1.2"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "3.2.*",
+        "squizlabs/php_codesniffer": "^3",
         "inpsyde/php-coding-standards": "^0.13"
     }
 }
