--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,9 @@
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3",
-    "inpsyde/php-coding-standards": "^0.13"
+    "inpsyde/php-coding-standards": "^0.13",
+    "brain/monkey": "^2.2",
+    "phpunit/phpunit": "^7.5"
   },
   "autoload": {
     "psr-4": {
