--- a/composer.json
+++ b/composer.json
@@ -1,45 +1,50 @@
 {
-  "name": "bueltge/multisite-global-media",
-  "type": "wordpress-muplugin",
-  "description": "Multisite Global Media is a WordPress plugin which shares media across the Multisite network.",
-  "keywords": [
-    "wordpress",
-    "muplugin",
-    "multisite"
-  ],
-  "homepage": "https://github.com/bueltge/Multisite-Global-Media",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Dominik Schilling",
-      "homepage": "https://dominikschilling.de/",
-      "role": "Developer"
+    "name": "bueltge/multisite-global-media",
+    "type": "wordpress-muplugin",
+    "description": "Multisite Global Media is a WordPress plugin which shares media across the Multisite network.",
+    "keywords": [
+        "wordpress",
+        "muplugin",
+        "multisite"
+    ],
+    "homepage": "https://github.com/bueltge/Multisite-Global-Media",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Dominik Schilling",
+            "homepage": "https://dominikschilling.de/",
+            "role": "Developer"
+        },
+        {
+            "name": "Frank Bültge",
+            "email": "f.bueltge@inpsyde.com",
+            "homepage": "https://bueltge.de",
+            "role": "Developer"
+        },
+        {
+            "name": "Guido Scialfa",
+            "email": "g.scialfa@inspyde.com",
+            "role": "Developer"
+        }
+    ],
+    "require": {
+        "php": ">=7",
+        "composer/installers": "^1.2"
     },
-    {
-      "name": "Frank Bültge",
-      "email": "f.bueltge@inpsyde.com",
-      "homepage": "https://bueltge.de",
-      "role": "Developer"
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3",
+        "inpsyde/php-coding-standards": "^0.13",
+        "brain/monkey": "^2.2",
+        "phpunit/phpunit": "^7.5"
     },
-    {
-      "name": "Guido Scialfa",
-      "email": "g.scialfa@inspyde.com",
-      "role": "Developer"
+    "autoload": {
+        "psr-4": {
+            "MultisiteGlobalMedia\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MultisiteGlobalMedia\\Tests\\": "tests/php"
+        }
     }
-  ],
-  "require": {
-    "php": ">=7",
-    "composer/installers": "^1.2"
-  },
-  "require-dev": {
-    "squizlabs/php_codesniffer": "^3",
-    "inpsyde/php-coding-standards": "^0.13",
-    "brain/monkey": "^2.2",
-    "phpunit/phpunit": "^7.5"
-  },
-  "autoload": {
-    "psr-4": {
-      "MultisiteGlobalMedia\\": "src/"
-    }
-  }
 }
