--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,14 @@
         }
     ],
     "require": {
-        "php": ">=7",
+        "php": ">=7.0.0",
         "composer/installers": "^1.2"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3",
         "inpsyde/php-coding-standards": "^0.13",
         "brain/monkey": "^2.2",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -45,6 +45,11 @@
     "autoload-dev": {
         "psr-4": {
             "MultisiteGlobalMedia\\Tests\\": "tests/php"
+        }
+    },
+    "config": {
+        "platform": {
+            "php": "7.0.0"
         }
     }
 }
