--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,4 +22,8 @@
             <directory suffix=".php">src</directory>
         </whitelist>
     </filter>
+    <logging>
+        <log type="coverage-clover" target="coverage/report/clover.xml"/>
+        <log type="coverage-html" target="coverage/report/html" lowUpperBound="35" highLowerBound="70"/>
+    </logging>
 </phpunit>
