--- a/.gitattributes
+++ b/.gitattributes
@@ -2,15 +2,23 @@
 *.jpg -text
 *.png -text
 
+# git
 .git                export-ignore
 .gitignore          export-ignore
 .gitattributes      export-ignore
+
+# IDE
 .idea/              export-ignore
-test/               export-ignore
+
+# some
 CONTRIBUTING.md     export-ignore
 Gruntfile.js        export-ignore
 README.md           export-ignore
 composer.json       export-ignore
 package.json        export-ignore
-phpunit.xml.dist    export-ignore
-.travis.yml         export-ignore
+
+# tests
+.coveralls.yml export-ignore
+.travis.yml export-ignore
+phpunit.xml.dist export-ignore
+tests/ export-ignore
