--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,16 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
+        "php": "~7.1",
         "composer/installers": "^1.2"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3",
         "inpsyde/php-coding-standards": "^0.13",
         "brain/monkey": "^2.2",
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "phpstan/phpstan-shim": "^0.11.16",
+        "szepeviktor/phpstan-wordpress": "^0.2.1"
     },
     "autoload": {
         "psr-4": {
@@ -50,7 +52,7 @@
     "config": {
         "optimize-autoloader": true,
         "platform": {
-            "php": "7.0.0"
+            "php": "7.1.0"
         }
     },
     "scripts": {
