--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,8 @@
     "scripts": {
         "zip": "composer archive --format=zip --file=dist",
         "build": "./scripts/build",
-        "analyze": "phpstan analyse src"
+        "analyze": "phpstan analyse src",
+        "post-install-cmd": "PHPStan\\WordPress\\Composer\\FixWpStubs::php73Polyfill",
+        "post-update-cmd": "PHPStan\\WordPress\\Composer\\FixWpStubs::php73Polyfill"
     }
 }
