--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
     - php: nightly
 
 install:
-  composer install
+  - composer install
   - if [[ $NIGHLTY == true ]]; then composer require "phpunit/phpunit:^8"; fi
 
 script:
