--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script:
 
 after_success:
   - if [[ $COVERAGE == true ]]; then bash <(curl -s https://codecov.io/bash); fi
+  - wget https://scrutinizer-ci.com/ocular.phar; php ocular.phar code-coverage:upload --format=php-clover coverage.xml;
 
 notifications:
   email:
