--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ matrix:
       env:
         - PHPCS=true
       script:
+        - |
+          sed -e 's#^function is_countable(#// &#' -i vendor/giacocorsiglia/wordpress-stubs/wordpress-stubs.php
+        - ./vendor/bin/phpstan analyze
         - ./vendor/bin/phpcs
     - php: 7.3
     - php: nightly
