Use phpstan as hint, allow failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ matrix:
     - php: 7.0
     - php: 7.1
     - php: 7.2
+    - php: 7.2
       env:
         - PHPCS=true
       script:
@@ -19,6 +20,7 @@ matrix:
   allow_failures:
     - php: 7.0
     - php: nightly
+    - env: PHPCS=true
 
 install:
   - if [[ $NIGHLTY == true ]]; then composer require "phpunit/phpunit:^8"; fi
