--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     ],
     "homepage": "https://github.com/bueltge/Multisite-Global-Media",
     "license": "GPL-2.0-or-later",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "authors": [
         {
             "name": "Dominik Schilling",
@@ -35,7 +37,7 @@
         "squizlabs/php_codesniffer": "^3",
         "inpsyde/php-coding-standards": "^1",
         "brain/monkey": "^2.2",
-        "phpunit/phpunit": "^8.0",
+        "phpunit/phpunit": "^6.0",
         "johnpbloch/wordpress-core": " ^5.0",
         "woocommerce/woocommerce": "^3.0|^4.0"
     },
@@ -58,7 +60,16 @@
     "scripts": {
         "zip": "composer archive --format=zip --file=dist",
         "build": "./scripts/build",
-        "analyze": "phpstan analyse src"
+        "analyze": "phpstan analyse src",
+        "cs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
+        "csf": "@php ./vendor/bin/phpcbf",
+        "tests": "@php ./vendor/phpunit/phpunit/phpunit",
+        "tests:no-cov": "@php ./vendor/phpunit/phpunit/phpunit --no-coverage",
+        "qa": [
+            "@tests:no-cov",
+            "@cs",
+            "@analyze"
+        ]
     },
     "extra": {
         "installer-disable": true
