added ACF stubs, bootstrapping by hook

--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,7 @@
         "brain/monkey": "^2.2",
         "phpunit/phpunit": "^6.0",
         "johnpbloch/wordpress-core": " ^5.0",
-        "woocommerce/woocommerce": "^3.0|^4.0",
-        "wpackagist-plugin/advanced-custom-fields": "^5.11"
+        "woocommerce/woocommerce": "^3.0|^4.0"
     },
     "autoload": {
         "psr-4": {
@@ -72,16 +71,6 @@
             "@analyze"
         ]
     },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://wpackagist.org",
-            "only": [
-                "wpackagist-plugin/*",
-                "wpackagist-theme/*"
-            ]
-        }
-    ],
     "extra": {
         "installer-disable": true
     }
